# toki-sync

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.ko.md  README.md  docker-compose.yml
.cargo/: config.toml
caddy/: Caddyfile  Dockerfile
config/: toki-sync.toml  toki-sync.toml.example
data/: toki_sync.db
docs/: API.ko.md  API.md  CONFIGURATION.ko.md  CONFIGURATION.md  DESIGN.ko.md  DESIGN.md  backup.ko.md  backup.md  custom-dashboard.ko.md  custom-dashboard.md  deploy-caddy-duckdns.ko.md  deploy-caddy-duckdns.md  deploy-local.ko.md  deploy-local.md  deploy-reverse-proxy.ko.md  deploy-reverse-proxy.md  deploy-self-signed.ko.md  deploy-self-signed.md  troubleshooting.ko.md  troubleshooting.md
src/: config.rs  main.rs  pricing.rs
src/auth/: brute_force.rs  jwt.rs  mod.rs  oidc.rs
src/db/: mod.rs  models.rs  postgres.rs  sqlite.rs
src/events/: clickhouse.rs  fjall_store.rs  mod.rs
src/metrics/: backend.rs  mod.rs  vm.rs
src/server/: http.rs  mod.rs  tcp.rs
src/server/handlers/: admin.rs  auth.rs  dashboard.rs  me.rs  metrics.rs  mod.rs  teams.rs
src/sync/: handler.rs  mod.rs  protocol.rs
static/: admin.html  dashboard.html  login.html
